--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="authors">
             <ul>
                 <li>Tushar Aggarwal</li>
-                <li>Other guy</li>
+                <li>Mohit Goswami</li>
             </ul>
         </div>
     </nav>
